Clojure Collector: changed access-valve to use Gradle (#899)
Clojure Collector: changed access-valve to publish to war-resources/.ebextensions (#900)
Clojure Collector: updated access-valve to log POSTs (#901)                               - TODO
Clojure Collector: fixed IP address forwarding for VPC-based environments (#854)
Clojure Collector: added support for POST as well as GET (#654)                                         - TODO
Scala Common Enrich: added support for GET querystring containing N raw events as JSON (#543)           - TODO
Scala Common Enrich: updated EnrichmentManager to process JSON fields (#903)                            - TODO
Scala Common Enrich: added input adapter to convert NV pairs to JSON (#904)                             - TODO
Scala Hadoop Enrich: updated to support generating multiple enriched events from one raw payload (#902) - TODO
StorageLoader: wrote JSON Path file for mobile_context (#776)
Redshift: added Redshift DDL for mobile_context (#542)

Version 0.9.7 (2014-09-02)
--------------------------
Ruby Tracker: bumped git submodule to 0.3.0 (#939)
Java Tracker: bumped git submodule to 0.5.1 (#948)
Node.js Tracker: added git submodule. Version 0.1.0 (#949)
Trackers: fixed broken git submodule links, thanks @OAGr! (#957)
EmrEtlRunner: bumped to 0.9.1
EmrEtlRunner: fixed @jobflow.ec2_subnet_id not being set due to incorrect guard, thanks @rslifka! (#956)
EmrEtlRunner: fixed bugs in --process-bucket (#973)
EmrEtlRunner: renamed --process-bucket option to --process-enrich (#972)
EmrEtlRunner: changed -s option for --skip to -x prevent clash with -s for --start (#975)
EmrEtlRunner: now allows shredding without prior enrichment (#927)
StorageLoader: bumped to 0.3.2
StorageLoader: removed EMPTYASNULL for loading JSONs (#942)
StorageLoader: added missing targetUrl field to ad_impression JSON Path file, thanks @gisripa! (#951)
StorageLoader: made providing jsonpath_assets optional (#958)